--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^128.0.0",
     "json2csv": "^6.0.0-alpha.2",
     "node-fetch": "^3.3.2",
-    "open": "^10.0.3"
+    "open": "^10.0.3",
+    "openai": "^6.8.1"
   }
 }
