🚀 Complete rewrite: Production-ready Next.js Gmail Assistant
- Migrated from JavaScript scripts to Next.js 14 + TypeScript
- Implemented Google OAuth2 authentication with Redis token storage
- Added AI-powered semantic search using OpenAI embeddings
- Integrated Pinecone vector database for fast similarity search
- Deployed on Vercel serverless (https://gmail-assisstant.vercel.app)
- Clean, modern UI with Tailwind CSS
- Comprehensive documentation and setup guides
- Removed old src/ directory and legacy files
- All features tested and working in production
- Sanitized all sensitive credentials for public repository

--- a/.gitignore
+++ b/.gitignore
@@ -4,20 +4,39 @@ package-lock.json
 
 # Environment variables
 .env
+.env.local
+.env*.local
 
-# OAuth tokens (stored locally after authentication)
+# OAuth tokens (no longer used - tokens stored in Redis)
 token.json
+
+# Vercel
+.vercel
+
+# Next.js
+.next/
+out/
+*.tsbuildinfo
+next-env.d.ts
 
 # Logs
 *.log
 logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # OS files
 .DS_Store
 Thumbs.db
+*.swp
+*.swo
 
 # IDE
 .vscode/
 .idea/
-*.swp
-*.swo
+
+# Testing
+coverage/
+.nyc_output/
+
