--- a/gmail-assistant/package.json
+++ b/gmail-assistant/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.30.0",
+    "@google/generative-ai": "^0.24.1",
     "@pinecone-database/pinecone": "^6.1.3",
     "@vercel/kv": "^3.0.0",
     "dotenv": "^17.2.3",
