Fix vercel.json: Configure for subdirectory deployment
- Remove duplicate vercel.json from gmail-assistant/
- Configure root vercel.json to properly build from gmail-assistant subdirectory
- Use Vercel v2 builds configuration with @vercel/next builder
- Route all traffic to gmail-assistant directory

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "buildCommand": "cd gmail-assistant && npm run build",
-  "devCommand": "cd gmail-assistant && npm run dev",
-  "installCommand": "cd gmail-assistant && npm install"
+  "version": 2,
+  "builds": [
+    {
+      "src": "gmail-assistant/package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "gmail-assistant/$1"
+    }
+  ]
 }
