--- a/gmail-assistant/package.json
+++ b/gmail-assistant/package.json
@@ -14,6 +14,7 @@
     "@pinecone-database/pinecone": "^6.1.3",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
     "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
