--- a/gmail-assistant/package.json
+++ b/gmail-assistant/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
+    "@types/three": "^0.182.0",
     "@upstash/qstash": "^2.8.4",
     "@upstash/redis": "^1.36.0",
     "@vercel/kv": "^3.0.0",
@@ -26,7 +27,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "redis": "^5.10.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
